# arxiv

./: .gitignore  README.md  access_arxiv.py  agent.py  configs.json  download.json  download.py  download.sh  logger.py  main.py  markdown.py  parsing.py  pyproject.toml  query_day_by_day.sh  request.sh  tasks.py
arxiver/: config.py  main.py  models.py
arxiver/base/: constants.py  pipeline.py  plugin.py  result.py
arxiver/core/: agent.py  run.py  structures.py
arxiver/pipelines/: __init__.py  download.py  download_by_parsing.py  generate_index.py  generate_indexing.py  request.py  request_then_translate.py
arxiver/plugins/: __init__.py  arxiv_parser.py  base.py  cvf_parser.py  default_keywords_filter.py  default_keywords_parser.py  downloader.py  eccv_parser.py  github_link_parser.py  index_generator.py  indexing_generator.py  language_model_based_keywords_filter.py  making_markdown_table.py  markdown_table_maker.py  openreview_parser.py  result_loader.py  result_saver.py  results_loader.py  translation.py
arxiver/utils/: helpers.py  io.py  logging.py  misc.py  parser.py
configs/: config.json
configs/core/: agent.json
configs/pipelines/: download.json  download_by_parsing.json  request.json  request_cvpr_2023_then_translate.json  request_cvpr_2024_then_translate.json  request_eccv_2018_then_translate.json  request_eccv_2020_then_translate.json  request_eccv_2022_then_translate.json  request_eccv_2024_then_translate.json  request_iccv_2023_then_translate.json  request_iclr_2023_then_translate.json  request_iclr_2024_then_translate.json  request_icml_2023_then_translate.json  request_icml_2024_then_translate.json  request_nips_2023_then_translate.json  request_nips_2024_then_translate.json  request_then_llm_filter_then_translate.json  request_then_translate.json  request_wacv_2023_then_translate.json  request_wacv_2024_then_translate.json
configs/plugins/: arxiv_parser.json  cvf_parser.json  default_keywords_parser.json  index_generator.json  indexing_generator.json  language_model_based_keywords_filter.json  openreview_parser.json  result_saver.json  translation.json
